Your awesome message

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Vverma-27.github.io/trial",
+  "homepage": "http://Vverma-27.github.io/startup",
   "name": "startup-competition",
   "version": "0.1.0",
   "private": true,
