Added Loader to App

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "cd build && gzip *.js && gzip *.css",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
